# monocular-visual-odometry

./: .gitignore  LICENSE  README.md
MATLAB/: calcBaseLine.m  calibrate.m  camParams.mat  grabImage.m  main.m  odom.m  readPoints.m
MATLAB/LK_Tracker/: LKTrackPyr.m  LKTrackShow.m
MATLAB2/: IterativeRefinement.m  RotationViewer.m  baseLine.m  cost.m  costsum.asv  costsum.m  costsum.prj  costsum2.m  data5.m  dataTEMP.m  scale.m  solve.m  solve.prj  testIterationCount.m  vectarrow.m
MATLAB2/codegen/mex/solve/: cfiGuiReport.mat
MATLAB2/codegen/mex/solve/html/: report.mldatx
MATLAB2/data/: data.m  data1.m  data2.m  data3.m  data4.m  data5.m
mvo/: CMakeLists.txt  package.xml  valgrind.xml
mvo/cfg/: dyn_config.cfg  mvo.cfg  rqt_multiplot.xml  rviz_test.rviz
mvo/launch/: mvo_node.launch  pylon_camera_big.launch  pylon_camera_small.launch  test.launch
mvo/msg/: RatingData.msg
mvo/scripts/: imu_dummy.py
mvo/src/: BaselineEstimator.cpp  BaselineEstimator.hpp  CornerTracker.cpp  CornerTracker.hpp  EpipolarGeometry.cpp  EpipolarGeometry.hpp  Feature.hpp  FeatureOperations.h  Frame.hpp  IterativeRefinement.cpp  IterativeRefinement.hpp  Merger.cpp  Merger.h  OdomData.hpp  PipelineStage.cpp  PipelineStage.h  Refiner.cpp  Refiner.hpp  SlidingWindow.cpp  SlidingWindow.hpp  TrackerDetector.cpp  TrackerDetector.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp  mvo.cpp  mvo.hpp  mvo_node.cpp  mvo_node.hpp  scratch.md
mvo/src/algorithms/: CornerTracking.cpp  CornerTracking.hpp  EpipolarGeometry.cpp  EpipolarGeometry.hpp  IterativeRefinement.cpp  IterativeRefinement.hpp
mvo/src/nils_lib/: Ringbuffer.hpp
mvo/src/operations/: FeatureOperations.cpp  FeatureOperations.h  VisualisationUtils.cpp  VisualisationUtils.hpp
mvo/src/pareigis_lib/: Channel.hpp  Semaphore.hpp
mvo/src/pipeline/: BaselineEstimator.cpp  BaselineEstimator.hpp  Merger.cpp  Merger.h  OdomData.hpp  PipeLineEnd.cpp  PipeLineEnd.hpp  PipelineBegin.cpp  PipelineBegin.hpp  PipelineStage.cpp  PipelineStage.h  Refiner.cpp  Refiner.hpp  Scaler.cpp  Scaler.hpp  TrackerDetector.cpp  TrackerDetector.hpp
mvo/src/sliding_window/: Feature.hpp  Frame.cpp  Frame.hpp  SlidingWindow.cpp  SlidingWindow.hpp
