<?xml version="1.0"?>
<package format="2">
  <name>mvo</name>
  <version>0.0.0</version>
  <description>The mvo package</description>

  <maintainer email="franek.stark@haw-hamburg.de">Franek Stark</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
</package>
